[package]
name = "imgui-terminal"
version = "0.1.0"
edition = "2018"
authors = ["Mike Waychison <mike@waychison.com>"]
description = "High-level Rust bindings to imgui-terminal, a terminal implementation for Dear ImGui."
homepage = "https://github.com/waych/imgui-terminal-rs"
repository = "https://github.com/waych/imgui-terminal-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
imgui = "0.7.0"
imgui-sys = "0.7.0"

[build-dependencies]
cxx-build = "1.0"
